error path of svgs

--- a/assets/scss/_globles.scss
+++ b/assets/scss/_globles.scss
@@ -18,7 +18,7 @@ $Dark-gray: hsl(0, 0%, 59%);
 }
 
 // Fonts sizes & Weights
-$fs-sm: 18px;
+$fs-sm: 1.125rem; //18px;
 $fw-md: 700;
 $fw-sm: 400;
 
